# ChangeLog for sys-apps/hexdump
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hexdump/ChangeLog,v 1.10 2005/01/22 21:26:34 luckyduck Exp $

  22 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> hexdump-1.6.ebuild:
  added ~amd64 to KEYWORDS. fixes #79121

  31 Dec 2004; <gongloo@gentoo.org> hexdump-1.6.ebuild:
  Added ~ppc-macos.

  16 Dec 2004; Markus Rothe <corsair@gentoo.org> hexdump-1.6.ebuild:
  Stable on ppc64

  03 Nov 2004; Markus Rothe <corsair@gentoo.org> hexdump-1.6.ebuild:
  Marked ~ppc64; bug #69502

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> hexdump-1.6.ebuild:
  Masked hexdump-1.6.ebuild stable for ppc

  25 Apr 2004; Guy Martin <gmsoft@gentoo.org> hexdump-1.6.ebuild:
  Marked stable on hppa.

  12 Apr 2004; <twp@gentoo.org> hexdump-1.6.ebuild:
  Added IUSE variable. Stable on x86.

*hexdump-1.6 (04 Mar 2004)

  04 Mar 2004; Tom Payne <twp@gentoo.org> hexdump-1.6.ebuild :
  Initial submit. Ebuild submitted by Stefan Briesenick. Bug # 39914.