@@ -1,4 +1,12 @@
-MD5 7b307b2b6e1203b7add4be965d60bee9 hexdump-1.6.ebuild 627
-MD5 5f3bf20f49bc8b1dfe47d82d8b1daefa ChangeLog 1053
-MD5 d992d28bec4a3bfd72b441145091a58e metadata.xml 244
+MD5 fc6e43f4ab8824270949135da6e98ffe ChangeLog 1133
+RMD160 7ca82b23fddcb46e90a939540e497b5da1a6c525 ChangeLog 1133
+SHA256 11185d7dddbfff642e68e72d00829b0be217111c8da164e23d65a386fc71da4a ChangeLog 1133
 MD5 ee558ae7d87dc0ea559e54aecb585565 files/digest-hexdump-1.6 62
+RMD160 a6e8a5d2822eb16fc08b6ed1df052747227a1d1a files/digest-hexdump-1.6 62
+SHA256 ca2882b359989b7b893f80a00b0b305c1f4c66ae332e5b89e55a0b85684dded9 files/digest-hexdump-1.6 62
+MD5 8ceb3edf2cb0a4c2b3dc44d3dd13207c hexdump-1.6.ebuild 621
+RMD160 9eaa622fc069d92881658e8223ce5958731f2fa3 hexdump-1.6.ebuild 621
+SHA256 73c52abea9784fff296b301ba86ca6a4af23a5f619cb53981386983c50b5e554 hexdump-1.6.ebuild 621
+MD5 d992d28bec4a3bfd72b441145091a58e metadata.xml 244
+RMD160 10fcb6c60f0d88174ff99fd391d0da3a75bdf89d metadata.xml 244
+SHA256 c7b6d3457d4746a2b281c4ac598bcf78b8e1553d8d63f2523b4cd0f4eaa422b1 metadata.xml 244
