@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/hexdump
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hexdump/ChangeLog,v 1.10 2005/01/22 21:26:34 luckyduck Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hexdump/ChangeLog,v 1.11 2006/02/09 11:37:46 malc Exp $
+
+  09 Feb 2006; <malc@gentoo.org> hexdump-1.6.ebuild:
+  Stable on amd64, bug #122195
 
   22 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> hexdump-1.6.ebuild:
   added ~amd64 to KEYWORDS. fixes #79121
